--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ import org.apache.tools.ant.filters.ReplaceTokens
 apply plugin: 'java'
 
 group = 'com.github.brawaru'
-version = '1.0-SNAPSHOT'
+version = '1.1'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
